[package]
name = "x"
version = "0.1.0"
authors = ["Tim de Jager <tdejager89@gmail.com>"]
include = ["src/*.rs", "src/bin/*.rs"]

[dependencies]
clap = "~2.19.0"
colored = "1.6"
markdown = "0.2"
syntect = "1.8"
toml = "0.4"
serde_derive = "1.0.66"
serde = "1.0.66"

[lib]
path = "src/lib.rs"


[[bin]]
name = "rusty-x"
path = "src/bin/main.rs"
