[package]
name = "rusty-x"
version = "0.1.3"
authors = ["Tim de Jager <tdejager89@gmail.com>"]
include = ["src/*.rs", "src/bin/*.rs", "Cargo.toml"]
readme = "README.md"
keywords = ["snippets", "cli"]
repository = "https://github.com/tdejager/rusty-x"
license = "MIT"
description = "A snippet manager in Rust"


[dependencies]
colored = "1.6"
markdown = "0.2"
syntect = "1.8"
toml = "0.4"
serde_derive = "1.0.66"
serde = "1.0.66"
dirs = "1.0.3"
skim = "0.4.0"
docopt = "1"
ansi_term = "0.11.0"

[lib]
path = "src/lib.rs"


[[bin]]
name = "x"
path = "src/bin/main.rs"
